SERVER-13557 disallow negated elemMatch value from using an index scan