src/mongo/db/query/planner_ixselect.cpp
@@ -174,10 +174,11 @@ namespace mongo {
                     return false;
                 }
 
-                // Can't index negations of MOD or REGEX
+                // Can't index negations of MOD, REGEX, or ELEM_MATCH_VALUE.
                 MatchExpression::MatchType childtype = node->getChild(0)->matchType();
                 if (MatchExpression::REGEX == childtype ||
-                    MatchExpression::MOD == childtype) {
+                    MatchExpression::MOD == childtype ||
+                    MatchExpression::ELEM_MATCH_VALUE == childtype) {
                     return false;
                 }
 
